// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`engine, notes/ basics root 1`] = `
Array [
  Object {
    "body": "",
    "children": Array [],
    "created": "1",
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "root",
    "links": Array [],
    "title": "Root",
    "type": "note",
    "updated": "1",
  },
]
`;

exports[`engine, notes/ basics root and two notes 1`] = `
Array [
  Object {
    "body": "",
    "children": Array [
      "foo",
    ],
    "created": "1",
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "root",
    "links": Array [],
    "title": "Root",
    "type": "note",
    "updated": "1",
  },
  Object {
    "body": "",
    "children": Array [
      "foo.ch1",
    ],
    "created": "1",
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "foo",
    "links": Array [],
    "title": "Foo",
    "type": "note",
    "updated": "1",
  },
  Object {
    "body": "",
    "children": Array [],
    "created": "1",
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "foo.ch1",
    "links": Array [],
    "title": "Ch1",
    "type": "note",
    "updated": "1",
  },
]
`;

exports[`engine, notes/ basics stub note 1`] = `
Array [
  "foo.ch1.md",
  "root.md",
  "root.schema.yml",
]
`;

exports[`engine, notes/ getNoteByPath/ get existing note with caps 1`] = `
Object {
  "body": "This is some content",
  "children": Array [],
  "created": 1603892680423,
  "custom": Object {},
  "data": Object {},
  "desc": "",
  "fname": "000 Index",
  "links": Array [],
  "title": "000 index",
  "type": "note",
  "updated": 1603892680423,
}
`;

exports[`engine, notes/ query/ * 1`] = `
Array [
  Object {
    "body": "",
    "children": Array [
      "foo",
    ],
    "created": "1",
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "root",
    "links": Array [],
    "title": "Root",
    "type": "note",
    "updated": "1",
  },
  Object {
    "body": "",
    "children": Array [
      "foo.ch1",
    ],
    "created": "1",
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "foo",
    "links": Array [],
    "schema": Object {
      "moduleId": "foo",
      "schemaId": "foo",
    },
    "title": "Foo",
    "type": "note",
    "updated": "1",
  },
  Object {
    "body": "",
    "children": Array [],
    "created": "1",
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "foo.ch1",
    "links": Array [],
    "schema": Object {
      "moduleId": "foo",
      "schemaId": "ch1",
    },
    "title": "Ch1",
    "type": "note",
    "updated": "1",
  },
]
`;

exports[`engine, notes/ query/ empty string 1`] = `
Array [
  Object {
    "body": "",
    "children": Array [
      "foo",
    ],
    "created": "1",
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "root",
    "links": Array [],
    "title": "Root",
    "type": "note",
    "updated": "1",
  },
]
`;

exports[`engine, notes/ query/ foo 1`] = `
Array [
  Object {
    "body": "",
    "children": Array [
      "foo.ch1",
    ],
    "created": "1",
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "foo",
    "links": Array [],
    "schema": Object {
      "moduleId": "foo",
      "schemaId": "foo",
    },
    "title": "Foo",
    "type": "note",
    "updated": "1",
  },
  Object {
    "body": "",
    "children": Array [],
    "created": "1",
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "foo.ch1",
    "links": Array [],
    "schema": Object {
      "moduleId": "foo",
      "schemaId": "ch1",
    },
    "title": "Ch1",
    "type": "note",
    "updated": "1",
  },
  Object {
    "body": "",
    "children": Array [
      "foo",
    ],
    "created": "1",
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "root",
    "links": Array [],
    "title": "Root",
    "type": "note",
    "updated": "1",
  },
]
`;

exports[`engine, notes/ rename/ domain with no children: bond 1`] = `
Array [
  Object {
    "note": Object {
      "body": "[[baz]]

",
      "children": Array [
        "foo.ch1",
      ],
      "created": "1",
      "custom": Object {},
      "data": Object {},
      "desc": "",
      "fname": "foo",
      "id": "foo",
      "links": Array [
        Object {
          "alias": "baz",
          "from": Object {
            "fname": "foo",
            "id": "foo",
          },
          "original": "baz",
          "pos": Object {
            "end": 7,
            "start": 0,
          },
          "to": Object {
            "anchorHeader": undefined,
            "fname": "baz",
          },
          "type": "wiki",
          "value": "baz",
        },
      ],
      "parent": "7c7fe6a6-4c32-4c97-89d5-74768dc31cc7",
      "schema": Object {
        "moduleId": "foo",
        "schemaId": "foo",
      },
      "title": "Foo",
      "type": "note",
      "updated": "1",
      "vault": Object {
        "fsPath": "/var/folders/65/c9lrx0tx6k7b_zlb4v1bs2rr0000gn/T/tmp-5867-VbSWNCkZ9x9T",
      },
    },
    "status": "update",
  },
  Object {
    "note": Object {
      "body": "[[foo]]
",
      "children": Array [],
      "created": "1",
      "custom": Object {},
      "data": Object {},
      "desc": "",
      "fname": "bar",
      "id": "bar",
      "links": Array [],
      "parent": "7c7fe6a6-4c32-4c97-89d5-74768dc31cc7",
      "title": "Bar",
      "type": "note",
      "updated": "1",
      "vault": Object {
        "fsPath": "/var/folders/65/c9lrx0tx6k7b_zlb4v1bs2rr0000gn/T/tmp-5867-VbSWNCkZ9x9T",
      },
    },
    "status": "delete",
  },
  Object {
    "note": Object {
      "body": "[[foo]]
",
      "children": Array [],
      "created": "1",
      "custom": Object {},
      "data": Object {},
      "desc": "",
      "fname": "baz",
      "id": "bar",
      "links": Array [],
      "parent": "7c7fe6a6-4c32-4c97-89d5-74768dc31cc7",
      "title": "Baz",
      "type": "note",
      "updated": "1",
      "vault": Object {
        "fsPath": "/var/folders/65/c9lrx0tx6k7b_zlb4v1bs2rr0000gn/T/tmp-5867-VbSWNCkZ9x9T",
      },
    },
    "status": "create",
  },
]
`;

exports[`engine, notes/ rename/ with note ref 1`] = `
Array [
  "bar.md",
  "baz.md",
  "foo.ch1.md",
  "foo.schema.yml",
  "root.md",
  "root.schema.yml",
]
`;

exports[`engine, notes/ write/ write note, match schema: notes 1`] = `
Array [
  Object {
    "body": "",
    "children": Array [
      "foo",
    ],
    "created": "1",
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "root",
    "links": Array [],
    "title": "Root",
    "type": "note",
    "updated": "1",
  },
  Object {
    "body": "",
    "children": Array [
      "foo.ch1",
    ],
    "created": "1",
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "foo",
    "links": Array [],
    "schema": Object {
      "moduleId": "foo",
      "schemaId": "foo",
    },
    "title": "Foo",
    "type": "note",
    "updated": "1",
  },
  Object {
    "body": "",
    "children": Array [],
    "created": "1",
    "data": Object {},
    "desc": "",
    "fname": "foo.ch1",
    "links": Array [],
    "schema": Object {
      "moduleId": "foo",
      "schemaId": "ch1",
    },
    "title": "Ch1",
    "type": "note",
    "updated": "1",
  },
]
`;

exports[`engine, notes/ write/ write note, no schema, new domain 1`] = `
Array [
  Object {
    "body": "",
    "children": Array [
      "foo",
      "bar",
    ],
    "created": "1",
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "root",
    "links": Array [],
    "title": "Root",
    "type": "note",
    "updated": "1",
  },
  Object {
    "body": "",
    "children": Array [
      "foo.ch1",
    ],
    "created": "1",
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "foo",
    "links": Array [],
    "schema": Object {
      "moduleId": "foo",
      "schemaId": "foo",
    },
    "title": "Foo",
    "type": "note",
    "updated": "1",
  },
  Object {
    "body": "",
    "children": Array [],
    "created": "1",
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "foo.ch1",
    "links": Array [],
    "schema": Object {
      "moduleId": "foo",
      "schemaId": "ch1",
    },
    "title": "Ch1",
    "type": "note",
    "updated": "1",
  },
  Object {
    "body": "",
    "children": Array [],
    "created": "1",
    "data": Object {},
    "desc": "",
    "fname": "bar",
    "links": Array [],
    "title": "Bar",
    "type": "note",
    "updated": "1",
  },
]
`;

exports[`engine, schema/ delete/ delete non-root 1`] = `
Array [
  "foo.ch1.md",
  "foo.md",
  "root.md",
  "root.schema.yml",
]
`;

exports[`note and schema basics/ root and two notes 1`] = `
Array [
  Object {
    "body": "",
    "children": Array [
      "foo",
    ],
    "created": "1",
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "root",
    "links": Array [],
    "title": "Root",
    "type": "note",
    "updated": "1",
  },
  Object {
    "body": "",
    "children": Array [
      "foo.ch1",
    ],
    "created": "1",
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "foo",
    "links": Array [],
    "schema": Object {
      "moduleId": "foo",
      "schemaId": "foo",
    },
    "title": "Foo",
    "type": "note",
    "updated": "1",
  },
  Object {
    "body": "",
    "children": Array [],
    "created": "1",
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "foo.ch1",
    "links": Array [],
    "schema": Object {
      "moduleId": "foo",
      "schemaId": "ch1",
    },
    "title": "Ch1",
    "type": "note",
    "updated": "1",
  },
]
`;
